# SCOSINT_AI

./: .env.example  .gitignore  LICENSE  README.md  install_maigret.bat  pyproject.toml  pyrightconfig.json  torvalds.txt
final_test/: report_torvalds_simple.json
src/: __init__.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  health.py  plugins.py  scan.py
src/core/: __init__.py  config.py  database.py  exceptions.py  models.py  plugin_base.py  plugin_manager.py
src/plugins/: __init__.py
src/plugins/alias/: __init__.py  alias_generator_plugin.py
src/plugins/breach/: __init__.py  hibp_plugin.py
src/plugins/email/: __init__.py  gravatar_plugin.py  holehe_plugin.py
src/plugins/phone/: __init__.py  phone_lookup_plugin.py
src/plugins/search/: __init__.py  duckduckgo_plugin.py
src/plugins/username/: __init__.py  maigret_plugin.py  sherlock_plugin.py  whatsmyname_plugin.py
src/utils/: __init__.py  logger.py
test_maigret_out/: report_torvalds_simple.json
tests/: __init__.py  test_api_quick.py  test_e2e.py  test_maigret.py  test_plugin_manager.py  test_real_scan.py  test_ulvi.py
