[project]
name = "scosint-ai"
version = "0.1.0"
description = "The most powerful modular OSINT+AI platform — find any digital footprint"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Ali190903", email = "alonewiithpc@gmail.com"}]

dependencies = [
    # --- Core Framework ---
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    "pydantic>=2.9.0,<3.0",
    "pydantic-settings>=2.5.0,<3.0",

    # --- Database ---
    "sqlalchemy[asyncio]>=2.0.35,<3.0",
    "asyncpg>=0.30.0,<1.0",
    "alembic>=1.14.0,<2.0",

    # --- Task Queue ---
    "celery[redis]>=5.4.0,<6.0",
    "redis>=5.2.0,<6.0",

    # --- HTTP Client ---
    "httpx>=0.27.0,<1.0",
    "aiohttp>=3.10.0,<4.0",

    # --- Browser Automation ---
    "playwright>=1.48.0,<2.0",

    # --- Phonetic / Name Matching ---
    "abydos>=0.5.0",

    # --- Logging ---
    "structlog>=24.4.0,<25.0",

    # --- Utilities ---
    "python-dotenv>=1.0.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "pytest-cov>=5.0.0,<6.0",
    "httpx",  # for TestClient
    "ruff>=0.7.0,<1.0",
    "mypy>=1.13.0,<2.0",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
extraPaths = ["."]
